--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sage-obsidian-shine-portfolio",
+  "name": "ringoshiro-portfolio",
   "private": true,
   "version": "1.2.0",
   "type": "module",
@@ -13,6 +13,7 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.10",
